[project]
name = "python-bale-bot"
version = "2.4.9"
dependencies = [
    "aiohttp>=3.6.0,<3.9.2",
    "asyncio~=3.4.3",
    "setuptools~=69.0.2"
]
requires-python = ">=3.8"
authors = [
    {name = "Kian Ahmadian", email = "info@kian-ahmadian.ir"}
]
description = "An API wrapper for Bale written in Python."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "bale", "bale-bot", "framework", "bot"
]

[project.urls]
Homepage = "https://python-bale-bot.ir"
Documentation = "https://docs.python-bale-bot.ir"
Repository = "https://github.com/python-bale-bot/python-bale-bot"
"Bug Tracker" = "https://github.com/python-bale-bot/python-bale-bot/issues"
Changelog = "https://python-bale-bot.ir/changelog"