[metadata]
name = balebot
version = 2.2.1
author = Kian Ahmadian
description = A Mini Pack For Bale Bots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kianahmadian/bale-bot
project_urls =
    Bug Tracker = https://github.com/kianahmadian/bale-bot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

