[metadata]
name = balebot-kianahmadian
version = 2.2.1
author = Kian Ahmadian
description = The official repository of the programming of "Bale bot"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kianahmadian/balebot
project_urls =
    Bug Tracker = https://github.com/kianahmadian/balebot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src